--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./public/assets/css/style.css">
+    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <title>Le yams</title>
 </head>
 <body>
@@ -11,6 +12,19 @@
     <header>
         <h1>Le jeu du Yam's</h1>
     </header>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="dices text-center bg-danger">
+                    <p class=" text-dark">LES DES</p>
+                </div>
+                <div class=" text-center bg-warning">
+                    <p class=" text-dark">LES SCORES</p>
+                </div>
+            </div>
+        </div>
+    </div>
+   
     
 <nav>
     <ul>
@@ -27,6 +41,6 @@
         </li>
     </ul>
 </nav>
-
+<script src="./public/assets/js/script.js"></script>
 </body>
 </html>
