--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <h1>Le jeu du Yammmmm's</h1>
+        <h1>Le jeu du Yam's</h1>
     </header>
     <div class="container">
         <div class="row">
