--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./public/assets/css/style.css">
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <title>Le yams</title>
@@ -12,7 +16,7 @@
 <body>
     <!-- HEADER -->
     <header>
-        <h1>Le jeu du Yam's</h1>
+        <h1 class="mt-3">Le jeu du Yam's</h1>
     </header>
     <!-- FIN HEADER -->
 
@@ -23,7 +27,7 @@
 
             <div class="col-12 col-md-6">
                 <!-- GAME -->
-                <div class="text-center bg-danger title-set">
+                <div class="text-center bg-red title-set">
                     <p class="text-dark">LES DES</p>
                 </div>
                 
@@ -34,7 +38,7 @@
 
             <div class="col-12 col-md-6">
                 <!-- LEADERBOARD -->
-                <div class="text-center bg-warning title-set">
+                <div class="text-center bg-gold title-set">
                     <p class="text-dark">LES SCORES</p>
                 </div>
                     <div class="box-content mb-3">
@@ -55,10 +59,10 @@
                 <div class="dice-icon"></div>
             </li>
             <li>
-                <div class="rules-icon"></div>
+                <div class="restart-icon"></div>
             </li>
             <li>
-                <div class="restart-icon"></div>
+                <div class="rules-icon"></div>
             </li>
             <li>
                 <div class="infos-icon"></div>
