--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@
                     <p class="text-dark">LES DES</p>
                 </div>
                 
-                    <div class="box-content mb-3">
-                        
+                    <div class="box-content mb-3 gameZone d-flex flex-wrap">
+                        <div class="face face1"></div>
+                        <div class="face face2"></div>
+                        <div class="face face3"></div>
+                        <div class="face face4"></div>
+                        <div class="face face5"></div>
                     </div>
             </div>
 
