--- a/index.html
+++ b/index.html
@@ -28,37 +28,137 @@
 
     <!-- CONTENT -->
     <div class="container-fluid">
-        <div class="row">
+        <div class="row justify-content-center">
 
+            <!-- GAME -->
             <div class="col-12 col-md-6">
-                <!-- GAME -->
                 <div class="text-center bg-red title-set">
-                    <p class="text-dark">LES DES</p>
+                    <div class="text-dark"><img class="me-3 mt-1" src="./public/assets/img/icons/dices/casino.png">Table
+                        de jeu<img class="ms-3 mt-1" src="./public/assets/img/icons/dices/casino.png"></div>
                 </div>
 
-                <div class="box-content mb-3">
-                    <img class="ms-2 mt-2" id="dice" src="./public/assets/img/icons/dices/dices6.png" alt="Dé" />
+                <div class="box-content-game mb-3">
+                    <img class="des1" id="dice" src="./public/assets/img/icons/dices/dic1.png" alt="Dé" />
+                    <img class="des2" id="dice" src="./public/assets/img/icons/dices/dic2.png" alt="Dé" />
+                    <img class="des" id="dice" src="./public/assets/img/icons/dices/dic3.png" alt="Dé" />
+                    <img class="des1" id="dice" src="./public/assets/img/icons/dices/dic4.png" alt="Dé" />
+                    <img class="des" id="dice" src="./public/assets/img/icons/dices/dic5.png" alt="Dé" />
                 </div>
             </div>
 
-            <div class="col-12 col-md-6">
-                <!-- LEADERBOARD -->
+
+             <!-- LEADERBOARD -->
+            <div class="col-12 col-md-4">
                 <div class="text-center bg-gold title-set">
-                    <p class="text-dark">LES SCORES</p>
+                    <div class="text-dark"><img class="me-3 mt-1"
+                            src="./public/assets/img/icons/dices/scores.png">Tableau des scores<img class="ms-3 mt-1"
+                            src="./public/assets/img/icons/dices/scores.png"></div>
                 </div>
-                <div class="box-content mb-3">
+
+                <div class="box-content-score mb-3">
+                    <table>
+                        <thead>
+                            <tr class="space-col">
+                                <th class="space-col">Catégorie</th>
+                                <th>Score</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="space-col">
+                                <td class="space-col">As<img class="ms-3" src="./public/assets/img/icons/dices/dice1.png"></td>
+                                <td>12</td>
+                            </tr>
+                            <tr class="space-col">
+                                <td class="space-col">Deux<img class="ms-3" src="./public/assets/img/icons/dices/dice2.png"></td>
+                                <td></td>
+                            </tr>
+                            <tr class="space-col">
+                                <td class="space-col">Trois<img class="ms-3" src="./public/assets/img/icons/dices/dice3.png"></td>
+                                <td></td>
+                            </tr>
+                            <tr class="space-col">
+                                <td class="space-col">Quatre<img class="ms-3" src="./public/assets/img/icons/dices/dice4.png"></td>
+                                <td></td>
+                            </tr>
+                            <tr class="space-col">
+                                <td class="space-col">Cinq<img class="ms-3" src="./public/assets/img/icons/dices/dice5.png"></td>
+                                <td></td>
+                            </tr>
+                            <tr class="space-col">
+                                <td class="space-col">Six<img class="ms-3" src="./public/assets/img/icons/dices/dice6.png"></td>
+                                <td></td>
+                            </tr>
+
+                            <tr class="space-col">
+                                <th class="space-col" class="fs-5">Total</th>
+                                <th class="fs-5">20</th>
+                            </tr>
+
+                            <tr class="space-col">
+                                <td class="space-col">Bonus</td>
+                                <td></td>
+                            </tr>
+
+                            <tr class="space-col">
+                                <th class="space-col" class="fs-5">Total 1</th>
+                                <th class="fs-5"></th>
+                            </tr>
+
+                            <tr class="space-col">
+                                <td class="space-col">Brelan</td>
+                                <td></td>
+                            </tr>
+                            <tr class="space-col">
+                                <td class="space-col">Carré</td>
+                                <td></td>
+                            </tr>
+                            <tr class="space-col">
+                                <td class="space-col">Full</td>
+                                <td></td>
+                            </tr>
+                            <tr class="space-col">
+                                <td class="space-col">Petite suite</td>
+                                <td></td>
+                            </tr>
+                            <tr class="space-col">
+                                <td class="space-col">Grande suite</td>
+                                <td></td>
+                            </tr>
+                            <tr class="space-col">
+                                <td class="space-col">Yam's</td>
+                                <td></td>
+                            </tr>
+                            <tr class="space-col">
+                                <td class="space-col">Chance</td>
+                                <td></td>
+                            </tr>
+
+                            <tr class="space-col">
+                                <th class="space-col" class="fs-5">Total 2</th>
+                                <th class="fs-5"></th>
+                            </tr>
+                            <tr class="space-col">
+                                <th class="space-col" class="fs-5">Total 1+2</th>
+                                <th class="fs-5"></th>
+                            </tr>
+
+                            <tr class="space-col">
+                                <td class="space-col" class="fs-4">Score<img class="ms-3"
+                                    src="./public/assets/img/icons/dices/scores.png"></td>
+                                <td class="fs-4">120</td>
+                            </tr>
+                        </tbody>
+                    </table>
 
                 </div>
             </div>
 
         </div>
     </div>
-
     <!-- FIN CONTENT -->
 
 
     <!-- NAVBAR -->
-
     <nav class="bg-nav">
         <ul>
             <li onclick="animateRoll()">
