--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             </tr>
 
                             <tr class="space-col">
-                                <th class="space-col" class="fs-5">Total</th>
+                                <th class="space-col fs-5">Total</th>
                                 <th class="fs-5">20</th>
                             </tr>
 
@@ -100,7 +100,7 @@
                             </tr>
 
                             <tr class="space-col">
-                                <th class="space-col" class="fs-5">Total 1</th>
+                                <th class="space-col fs-5">Total 1</th>
                                 <th class="fs-5"></th>
                             </tr>
 
@@ -134,16 +134,16 @@
                             </tr>
 
                             <tr class="space-col">
-                                <th class="space-col" class="fs-5">Total 2</th>
+                                <th class="space-col fs-5">Total 2</th>
                                 <th class="fs-5"></th>
                             </tr>
                             <tr class="space-col">
-                                <th class="space-col" class="fs-5">Total 1+2</th>
+                                <th class="space-col fs-5">Total 1+2</th>
                                 <th class="fs-5"></th>
                             </tr>
 
                             <tr class="space-col">
-                                <td class="space-col" class="fs-4">Score<img class="ms-3"
+                                <td class="space-col fs-4">Score<img class="ms-3"
                                     src="./public/assets/img/icons/dices/scores.png"></td>
                                 <td class="fs-4">120</td>
                             </tr>
