--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
                     <p class="text-dark">LES DES</p>
                 </div>
                 
-                    <div class="box-content mb-3 gameZone d-flex flex-wrap">
-                        <div class="face face1"></div>
-                        <div class="face face2"></div>
-                        <div class="face face3"></div>
-                        <div class="face face4"></div>
-                        <div class="face face5"></div>
+                    <div class="box-content mb-3 gameZone d-flex flex-wrap align-items-center justify-content-center">
+                        <div class="">CLIQUEZ SUR LANCER !</div>
+                        <div class="face face1 d-none"></div>
+                        <div class="face face2 d-none"></div>
+                        <div class="face face3 d-none"></div>
+                        <div class="face face4 d-none"></div>
+                        <div class="face face5 d-none"></div>
                     </div>
             </div>
 
@@ -59,7 +60,7 @@
 
     <nav class="bg-nav">
         <ul>
-            <li>
+            <li id="dice-icon">
                 <div class="dice-icon"></div>
             </li>
             <li>
