--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
                 </div>
 
                 <div class="box-content-game mb-3">
-                    <img class="des1" id="dice" src="./public/assets/img/icons/dices/dic1.png" alt="Dé" />
-                    <img class="des2" id="dice" src="./public/assets/img/icons/dices/dic2.png" alt="Dé" />
-                    <img class="des" id="dice" src="./public/assets/img/icons/dices/dic3.png" alt="Dé" />
-                    <img class="des1" id="dice" src="./public/assets/img/icons/dices/dic4.png" alt="Dé" />
-                    <img class="des" id="dice" src="./public/assets/img/icons/dices/dic5.png" alt="Dé" />
+                    <img class="des0" id="dice" src="./public/assets/img/icons/dices/dic1.png" alt="Dé" />
+                    <img class="des1 face" src="./public/assets/img/icons/dices/dic2.png" alt="Dé" />
+                    <img class="des2" id="dice" src="./public/assets/img/icons/dices/dic3.png" alt="Dé" />
+                    <img class="des3" id="dice" src="./public/assets/img/icons/dices/dic4.png" alt="Dé" />
+                    <img class="des4" id="dice" src="./public/assets/img/icons/dices/dic5.png" alt="Dé" />
                 </div>
             </div>
 
@@ -161,7 +161,7 @@
     <!-- NAVBAR -->
     <nav class="bg-nav">
         <ul>
-            <li onclick="animateRoll()">
+            <li onclick="animate()">
                 <div class="dice-icon"></div>
             </li>
             <li id="restartButton">
