--- a/test.html
+++ b/test.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="./node_modules/bootstrap/dist/js/bootstrap.js" crossorigin="anonymous"></script>
 
     <title>Le yams</title>
 </head>
@@ -13,7 +14,7 @@
 
     <!-- FIN MODAL -->
 
-    <script src="./public/assets/js/test.js"></script>
+    <script src="./public/assets/js/tests.js"></script>
 </body>
 
 </html>
