--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <script src="./node_modules/bootstrap/dist/js/bootstrap.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/adfcc0ab0f.js" crossorigin="anonymous"></script>
+
     <title>Le yams</title>
 </head>
 
@@ -39,12 +40,12 @@
                 <div id="dice" class="box-content-game mb-3">
 
                 </div>
-                
-                    
+
+
             </div>
 
 
-             <!-- LEADERBOARD -->
+            <!-- LEADERBOARD -->
             <div class="col-12 col-md-4">
                 <div class="text-center bg-gold title-set">
                     <div class="text-dark"><img class="me-3 mt-1"
@@ -62,27 +63,33 @@
                         </thead>
                         <tbody>
                             <tr class="space-col">
-                                <td class="space-col">As<img class="ms-3" src="./public/assets/img/icons/dices/dice1.png"></td>
+                                <td class="space-col">As<img class="ms-3"
+                                        src="./public/assets/img/icons/dices/dice1.png"></td>
                                 <td>12</td>
                             </tr>
                             <tr class="space-col">
-                                <td class="space-col">Deux<img class="ms-3" src="./public/assets/img/icons/dices/dice2.png"></td>
+                                <td class="space-col">Deux<img class="ms-3"
+                                        src="./public/assets/img/icons/dices/dice2.png"></td>
                                 <td></td>
                             </tr>
                             <tr class="space-col">
-                                <td class="space-col">Trois<img class="ms-3" src="./public/assets/img/icons/dices/dice3.png"></td>
+                                <td class="space-col">Trois<img class="ms-3"
+                                        src="./public/assets/img/icons/dices/dice3.png"></td>
                                 <td></td>
                             </tr>
                             <tr class="space-col">
-                                <td class="space-col">Quatre<img class="ms-3" src="./public/assets/img/icons/dices/dice4.png"></td>
+                                <td class="space-col">Quatre<img class="ms-3"
+                                        src="./public/assets/img/icons/dices/dice4.png"></td>
                                 <td></td>
                             </tr>
                             <tr class="space-col">
-                                <td class="space-col">Cinq<img class="ms-3" src="./public/assets/img/icons/dices/dice5.png"></td>
+                                <td class="space-col">Cinq<img class="ms-3"
+                                        src="./public/assets/img/icons/dices/dice5.png"></td>
                                 <td></td>
                             </tr>
                             <tr class="space-col">
-                                <td class="space-col">Six<img class="ms-3" src="./public/assets/img/icons/dices/dice6.png"></td>
+                                <td class="space-col">Six<img class="ms-3"
+                                        src="./public/assets/img/icons/dices/dice6.png"></td>
                                 <td></td>
                             </tr>
 
@@ -141,7 +148,7 @@
 
                             <tr class="space-col">
                                 <td class="space-col fs-4">Score<img class="ms-3"
-                                    src="./public/assets/img/icons/dices/scores.png"></td>
+                                        src="./public/assets/img/icons/dices/scores.png"></td>
                                 <td class="fs-4">120</td>
                             </tr>
                         </tbody>
@@ -161,13 +168,14 @@
             <li id="dice-icon">
                 <div class="dice-icon"></div>
             </li>
-            <li id="restartButton">
-                <div class="restart-icon"></div>
+            <li data-bs-toggle="modal" data-bs-target="#restartModal">
+                <div class=" restart-icon">
+                </div>
             </li>
             <li id="rulesButton">
                 <div class="rules-icon"></div>
             </li>
-            <li id="infoButton">
+            <li>
                 <div class="infos-icon"></div>
             </li>
         </ul>
@@ -177,28 +185,30 @@
 
 
     <!-- MODAL RESTART -->
+    <!-- Modal -->
     <div class="modal fade" id="restartModal" tabindex="-1" aria-labelledby="restartButtonLabel" aria-hidden="true">
         <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-            <h1 class="modal-title fs-5" id="restartButtonLabel">Redémarrer la partie</h1>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="restartButtonLabel">Redémarrer la partie</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p class="luckiest-guy-regular">Voulez-vous redémarrer la partie ?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+                    <button type="button" class="btn btn-primary" onclick='window.location.reload(false)'
+                        value="Rafraichir">Relancer</button>
+                </div>
             </div>
-            <div class="modal-body">
-            <p class="luckiest-guy-regular">Voulez-vous redémarrer la partie ?</p>
-            </div>
-            <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
-            <button type="button" class="btn btn-primary" onclick='window.location.reload(false)' value="Rafraichir">Relancer</button>
-            </div>
-        </div>
         </div>
     </div>
 
 
     <!-- MODAL RULES -->
-    <div class="modal fade modal-dialog-scrollable mt-5" id="rulesModal" tabindex="-1"
-        aria-labelledby="rulesModalLabel" aria-hidden="true">
+    <div class="modal fade modal-dialog-scrollable mt-5" id="rulesModal" tabindex="-1" aria-labelledby="rulesModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -263,28 +273,6 @@
         </div>
     </div>
 
-
-        <!-- MODAL INFOS -->
-    <!-- Modal -->
-    <div class="modal fade" id="infoModal" tabindex="-1" aria-labelledby="infoButtonLabel" aria-hidden="true">
-        <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-            <h1 class="modal-title fs-5" id="infoButtonLabel"></h1>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-            <p class="luckiest-guy-regular">Développer avec passion et amour.</p>
-            <p class="luckiest-guy-regular">Par Coraline, Val et Alex.</p>
-            <p style="text-align: center;"><i class="bi bi-github"></i> <a href="https://github.com/ThunderHime" alt="Coraline Boulenger">Coraline</a> - <a href="https://github.com/Valwer" alt="Valwer"><i class="bi bi-github"></i> Val</a> - <a href="https://github.com/xR3PMz" alt="xR3PMz"><i class="bi bi-github"></i> Alex</a></p>
-            </div>
-            <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
-            <button type="button" class="btn btn-primary" onclick='window.location.reload(false)' value="Rafraichir">Relancer</button>
-            </div>
-        </div>
-        </div>
-    </div>
     <!-- FIN MODAL -->
 
     <script src="./public/assets/js/script.js"></script>
