--- a/index.html
+++ b/index.html
@@ -31,14 +31,13 @@
         <div class="row justify-content-center">
 
             <!-- GAME -->
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-lg-7">
                 <div class="text-center bg-red title-set">
                     <div class="text-dark"><img class="me-3 mt-1" src="./public/assets/img/icons/dices/casino.png">Table
                         de jeu<img class="ms-3 mt-1" src="./public/assets/img/icons/dices/casino.png"></div>
                 </div>
 
-                <div id="dice" class="box-content-game mb-3">
-
+                <div id="dice" class="box-content-game mb-5">
                 </div>
                 
                     
@@ -46,7 +45,7 @@
 
 
              <!-- LEADERBOARD -->
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-lg-4">
                 <div class="text-center bg-gold title-set">
                     <div class="text-dark"><img class="me-3 mt-1"
                             src="./public/assets/img/icons/dices/scores.png">Scores<img class="ms-3 mt-1"
@@ -133,10 +132,6 @@
 
                             <tr class="space-col">
                                 <th class="space-col fs-5">Total 2</th>
-                                <th class="fs-5"></th>
-                            </tr>
-                            <tr class="space-col">
-                                <th class="space-col fs-5">Total 1+2</th>
                                 <th class="fs-5"></th>
                             </tr>
 
