--- a/index.html
+++ b/index.html
@@ -275,9 +275,9 @@
                 <hr>
             <p class="luckiest-guy-regular">Lien vers les développeurs:</p>
             <div class="center-element">
-                <div><i class="fa-brands fa-github"></i> <a href="https://github.com/ThunderHime" alt="Coraline Boulenger">Coraline</a></div>  
-                <div><i class="fa-brands fa-github"></i> <a href="https://github.com/Valwer" alt="Valwer">Val</a></div>
-                <div><i class="fa-brands fa-github"></i> <a href="https://github.com/xR3PMz" alt="xR3PMz"> Alex</a></div>
+                <div><i class="fa-brands fa-github"></i> <a href="https://github.com/ThunderHime" target="_blank" alt="Coraline Boulenger">Coraline</a></div>  
+                <div><i class="fa-brands fa-github"></i> <a href="https://github.com/Valwer" alt="Valwer" target="_blank">Val</a></div>
+                <div><i class="fa-brands fa-github"></i> <a href="https://github.com/xR3PMz" alt="xR3PMz" target="_blank"> Alex</a></div>
             </div>
             </div>
             <div class="modal-footer">
