--- a/index.html
+++ b/index.html
@@ -194,7 +194,9 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p class="luckiest-guy-regular">Voulez-vous redémarrer la partie ?</p>
+                    <p>La partie prendra fin et les scores seront réinitialisés.</p>
+                    <hr>
+                    <p class="luckiest-guy-regular text-center">Voulez-vous redémarrer la partie ?</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
