--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@
                                 <td class="space-col">Total 5</td>
                                 <td><strong>Cumul des 5 </strong></td>
                             </tr>
+                            <tr class="space-col">
                                 <td class="space-col">Total 6</td>
                                 <td><strong>Cumul des 6 </strong></td>
                             </tr>
