--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="row justify-content-center">
 
             <!-- GAME -->
-            <div class="col-12 col-lg-7">
+            <div class="col-12 col-lg-7 mb-4">
                 <div class="text-center bg-red title-set0">
                     <div class="text-dark"><img class="me-3 mt-1" src="./public/assets/img/icons/dices/casino.png">Table
                         de jeu<img class="ms-3 mt-1" src="./public/assets/img/icons/dices/casino.png"></div>
