--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <tr class="space-col cumul_1">
                                 <td class="space-col">As<img class="ms-3"
                                         src="./public/assets/img/icons/dices/dice1.png"></td>
-                                <td class="score-cell" data-category="as"></td>
+                                <td class="score-cell" data-category="cumulAs"></td>
                             </tr>
                             <tr class="space-col cumul_2">
                                 <td class="space-col">Deux<img class="ms-3"
