--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- google fonts -->
+    <link rel="shortcut icon" href="favicon.ico.jpg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link rel="stylesheet" href="./public/assets/css/style.css">
@@ -65,7 +66,7 @@
                             <tr class="space-col cumul_1">
                                 <td class="space-col">As<img class="ms-3"
                                         src="./public/assets/img/icons/dices/dice1.png"></td>
-                                <td class="score-cell" data-category="as"></td>
+                                <td class="score-cell" data-category="cumulAs"></td>
                             </tr>
                             <tr class="space-col cumul_2">
                                 <td class="space-col">Deux<img class="ms-3"
@@ -163,7 +164,9 @@
     <nav class="bg-nav">
         <ul>
             <li id="dice-icon">
-                <div class="dice-icon"><div class="dice-info"></div></div>
+                <div class="dice-icon">
+                    <div class="dice-info"></div>
+                </div>
             </li>
             <li data-bs-toggle="modal" data-bs-target="#restartModal">
                 <div class="restart-icon"></div>
