--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
-
+    <link rel="manifest" href="manifest.json">
     <script src="./node_modules/bootstrap/dist/js/bootstrap.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/adfcc0ab0f.js" crossorigin="anonymous"></script>
 
